no-operador/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rhbk-kubeping-plain
  labels:
    app.kubernetes.io/part-of: rhbk-kubeping-plain
