no-operador/manifests/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql-db
  namespace: rhbk-kubeping-plain
spec:
  serviceName: postgres-svc
  selector:
    matchLabels:
      app: postgresql-db
  replicas: 1
  template:
    metadata:
      labels:
        app: postgresql-db
    spec:
      containers:
        - name: postgresql-db
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /data
              name: cache-volume
      volumes:
        - name: cache-volume
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: rhbk-kubeping-plain
spec:
  selector:
    app: postgresql-db
  ports:
    - port: 5432
      targetPort: 5432
